M_19_DjangoProd/mysite/log.txt
Watching for file changes with StatReloader
/Users/antongaranin/PycharmProjects/pythonProject/django/M_19_DjangoProd/mysite/mysite/settings.py changed, reloading.
Watching for file changes with StatReloader
Watching for file changes with StatReloader
Not Found: /favicon.ico
Internal Server Error: /admin/shopapp/product/import-products-csv/
Traceback (most recent call last):
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/base.py", line 505, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'endblock'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/core/handlers/base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/M_19_DjangoProd/mysite/shopapp/admin.py", line 77, in import_csv
    return render(request, "admin/csv_form.html", context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/shortcuts.py", line 24, in render
    content = loader.render_to_string(template_name, context, request, using=using)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/backends/django.py", line 33, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/engine.py", line 175, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/loaders/cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/loaders/base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/base.py", line 200, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/base.py", line 513, in parse
    raise self.error(token, e)
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/loader_tags.py", line 293, in do_extends
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/base.py", line 507, in parse
    self.invalid_block_tag(token, command, parse_until)
  File "/Users/antongaranin/PycharmProjects/pythonProject/django/venv/lib/python3.11/site-packages/django/template/base.py", line 568, in invalid_block_tag
    raise self.error(
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 13: 'endblock'. Did you forget to register or load this tag?
Method Not Allowed: /ru/shop/api/products/upload_csv/
Not Found: /static/rest_framework/css/bootstrap.min.css
Method Not Allowed: /ru/shop/api/products/upload_csv/
Not Found: /static/rest_framework/css/bootstrap.min.css
Not Found: /static/rest_framework/css/default.css
Not Found: /static/rest_framework/js/jquery-3.5.1.min.js
Not Found: /static/rest_framework/js/ajax-form.js
Not Found: /static/rest_framework/css/prettify.css
Not Found: /static/rest_framework/css/bootstrap-tweaks.css
Not Found: /static/rest_framework/js/csrf.js
Not Found: /static/rest_framework/js/bootstrap.min.js
Not Found: /static/rest_framework/js/default.js
Not Found: /static/rest_framework/js/prettify-min.js
/Users/antongaranin/PycharmProjects/pythonProject/django/M_19_DjangoProd/mysite/mysite/settings.py changed, reloading.
Watching for file changes with StatReloader
Watching for file changes with StatReloader
/Users/antongaranin/PycharmProjects/pythonProject/django/M_19_DjangoProd/mysite/mysite/settings.py changed, reloading.
Watching for file changes with StatReloader
Аутентификация пользователя admin1 прошла успешно
Not Found: /media/users/3/user-details/крош_a9iHlqL.webp
Not Found: /media/users/3/user-details/крош_a9iHlqL.webp
Not Found: /media/users/2/user-details/Tommy_Vercetti.jpg
Not Found: /media/users/1/user-details/кар-карыч.png
Not Found: /media/users/1/user-details/кар-карыч.png
Запрошена страница со списком товаров
Not Found: /media/products/product_2/preview/desktop.jpeg
Not Found: /media/products/product_None/preview/desktop_ultra.jpeg
Not Found: /media/products/product_2/preview/desktop.jpeg
/Users/antongaranin/PycharmProjects/pythonProject/django/M_19_DjangoProd/mysite/mysite/settings.py changed, reloading.
Watching for file changes with StatReloader
Not Found: /media/products/product_2/preview/desktop.jpeg
Запрошена страница со списком товаров
Not Found: /media/products/product_2/preview/desktop.jpeg
Not Found: /media/products/product_None/preview/desktop_ultra.jpeg
Запрошена страница со списком товаров
Not Found: /media/products/product_2/preview/desktop.jpeg
Not Found: /media/products/product_None/preview/desktop_ultra.jpeg
/Users/antongaranin/PycharmProjects/pythonProject/django/M_19_DjangoProd/mysite/mysite/settings.py changed, reloading.
Watching for file changes with StatReloader
